--- a/src/article-agrandir-sa-maison.html
+++ b/src/article-agrandir-sa-maison.html
@@ -88,7 +88,7 @@ keywords:
         <div class="menu_content">
           <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-to-left my-2">La valorisation du patrimoine</h3>
+              <h3 class="menu_header-title3 text-to-left my-2">La valorisation du patrimoine</h3>
             </div>
             <p class="menu_content-p">
               Investir dans l'<strong>agrandissement maison</strong>, c'est aussi investir dans la valorisation de son
@@ -138,7 +138,7 @@ keywords:
         <div class="menu_content">
           <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-to-left my-2">Choisir les bons professionnels</h3>
+              <h3 class="menu_header-title3 text-to-left my-2">Choisir les bons professionnels</h3>
             </div>
             <p class="menu_content-p">
               Travailler avec des experts est indispensable pour garantir la réussite de votre <strong>extension
@@ -165,7 +165,7 @@ keywords:
         <div class="menu_content">
           <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-to-left my-2">Les permis et autorisations nécessaires</h3>
+              <h3 class="menu_header-title3 text-to-left my-2">Les permis et autorisations nécessaires</h3>
             </div>
             <p class="menu_content-p">
               Avant de commencer les travaux, vous devrez probablement obtenir certaines autorisations administratives.
@@ -227,7 +227,7 @@ keywords:
         <div class="menu_content">
           <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-to-left my-2">Matériaux et technologies modernes</h3>
+              <h3 class="menu_header-title3 text-to-left my-2">Matériaux et technologies modernes</h3>
             </div>
             <p class="menu_content-p">
               Le choix des matériaux est une étape clé pour un <strong>confort thermique entretien</strong> performant
@@ -255,7 +255,7 @@ keywords:
         <div class="menu_content">
           <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-to-left my-2">Le respect des délais et du budget</h3>
+              <h3 class="menu_header-title3 text-to-left my-2">Le respect des délais et du budget</h3>
             </div>
             <p class="menu_content-p">
               Pour maîtriser votre projet d’<strong>agrandissement maison</strong>, il est fondamental de fixer dès le
@@ -309,7 +309,7 @@ keywords:
         <div class="menu_content">
           <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-to-left my-3">Intégrer des éléments écologiques</h3>
+              <h3 class="menu_header-title3 text-to-left my-3">Intégrer des éléments écologiques</h3>
             </div>
             <p class="menu_content-p">
               L’ajout d’équipements écologiques est de plus en plus prisé lors de projets d’agrandissement. Panneaux
@@ -335,7 +335,7 @@ keywords:
         <div class="menu_content">
           <div class="container to-be-100">
             <div class="menu_header justify-content-start pb-5">
-              <h3 class="menu_header-title2 text-to-left my-2">Faire appel à une entreprise spécialisée</h3>
+              <h3 class="menu_header-title3 text-to-left my-2">Faire appel à une entreprise spécialisée</h3>
             </div>
             <p class="menu_content-p">
               Si gérer tous ces aspects vous semble trop complexe, n’hésitez pas à solliciter une entreprise spécialisée
@@ -388,19 +388,19 @@ keywords:
         <div class="menu_content">
           <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-to-left my-2">Comparaison des options</h3>
+              <h3 class="menu_header-title3 text-to-left my-2">Comparaison des options</h3>
             </div>
             <p class="menu_content-p">
               Pour vous accompagner, voici une liste des principaux matériaux utilisés pour les extensions :
             </p>
             <ul class="ml-5">
-              <li class="menu_content-p"><strong>Bois : </strong>chaleureux, excellent isolant, facile à travailler.
+              <li class="menu_content-p color-black"><strong>Bois : </strong>chaleureux, excellent isolant, facile à travailler.
               </li>
-              <li class="menu_content-p"><strong>PVC : </strong>léger, résistant aux intempéries, entretien minimal.
+              <li class="menu_content-p color-black"><strong>PVC : </strong>léger, résistant aux intempéries, entretien minimal.
               </li>
-              <li class="menu_content-p"><strong>Acier : </strong>robuste, adapté aux grandes portées, tendance moderne.
+              <li class="menu_content-p color-black"><strong>Acier : </strong>robuste, adapté aux grandes portées, tendance moderne.
               </li>
-              <li class="menu_content-p"><strong>Aluminium : </strong>durable, ne rouille pas, esthétique contemporaine.
+              <li class="menu_content-p color-black"><strong>Aluminium : </strong>durable, ne rouille pas, esthétique contemporaine.
               </li>
             </ul>
             <p class="menu_content-p">Que ce soit pour le gros œuvre ou les finitions, réfléchissez toujours à
@@ -419,7 +419,7 @@ keywords:
         <div class="menu_content">
           <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-to-left my-2">Préserver l’harmonie de votre habitat</h3>
+              <h3 class="menu_header-title3 text-to-left my-2">Préserver l’harmonie de votre habitat</h3>
             </div>
             <p class="menu_content-p">
               N’oubliez jamais que l’objectif est d’harmoniser l’ancienne et la nouvelle partie de votre maison.
