--- a/src/contact.html
+++ b/src/contact.html
@@ -15,8 +15,7 @@ keywords:
       <p class="slider_content-p">DMB CONSTRUCTION</p>
       <div class="slider_content-button2 pb-0 mb-0 mt-4 pt-4">
         <p class="slider_content-button--p">
-          {{site.data.company.address1}}
-          {{site.data.company.address2}}
+          {{site.data.company.address}}
         </p>
       </div>
       <div class="slider_content-button2 d-flex justify-content-center pt-0 mt-0">
@@ -32,10 +31,10 @@ keywords:
   <div class="container to-100-per-768">
     <div class="row">
       <div class="col-md-12">
-        <div class="menu_content">
+        <!-- <div class="menu_content">
           <h2 class="menu_header-title text-center mb-0 pb-0">Nous contacter</h2>
           <p class="menu_header-title2 text-center pt-0 mt-0">Au sujet de</p>
-        </div>
+        </div> -->
         <br><br>
         <div class="contact_content">
           <form class="form contact_content-form" id="contactForm" method="post"
@@ -74,7 +73,7 @@ keywords:
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <input type="number" class="black_form-input" id="phone" name="phone" placeholder="TElEPHONE">
+                  <input type="number" class="black_form-input" id="phone" name="phone" placeholder="TELEPHONE">
                 </div>
               </div>
               <div class="col-md-6">
