--- a/src/entreprise-d-extension-de-maison.html
+++ b/src/entreprise-d-extension-de-maison.html
@@ -50,7 +50,7 @@ keywords:
               extension bien pensée.</p>
 
               <div class="menu_header justify-content-start py-3">
-                <h3 class="menu_header-title2 text-to-left my-2">Augmenter la valeur immobilière</h3>
+                <h3 class="menu_header-title3 text-to-left my-2">Augmenter la valeur immobilière</h3>
               </div>
   
               <p class="menu_content-p">Avoir quelques mètres carrés supplémentaires peut considérablement augmenter la valeur marchande de votre
@@ -87,12 +87,12 @@ keywords:
             <p class="menu_content-p">En fonction de votre budget et de vos attentes, plusieurs options s'offrent à vous :</p>
 
             <ul class="ml-5">
-              <li class="menu_content-p"><strong>Clé en main</strong> : Pour ceux qui préfèrent ne pas gérer les détails du chantier, les
+              <li class="menu_content-p color-black"><strong>Clé en main</strong> : Pour ceux qui préfèrent ne pas gérer les détails du chantier, les
                 solutions "clé en main" offrent tranquillité d'esprit et assurance d'un résultat conforme aux attentes.
               </li>
-              <li class="menu_content-p"><strong>Ossature bois</strong> : Légèrement moins coûteuse et rapide à mettre en œuvre, cette option a
+              <li class="menu_content-p color-black"><strong>Ossature bois</strong> : Légèrement moins coûteuse et rapide à mettre en œuvre, cette option a
                 aussi l'avantage écologique de miser sur des matériaux renouvelables.</li>
-              <li class="menu_content-p"><strong>Maçonnerie</strong> : Plus traditionnelle, cette méthode est très robuste et offre une grande
+              <li class="menu_content-p color-black"><strong>Maçonnerie</strong> : Plus traditionnelle, cette méthode est très robuste et offre une grande
                 flexibilité en termes de design et d'isolation.</li>
             </ul>
           </div>
@@ -111,7 +111,7 @@ keywords:
         <div class="menu_content">
           <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-to-left my-2">L’importance du choix des matériaux</h3>
+              <h3 class="menu_header-title3 text-to-left my-2">L’importance du choix des matériaux</h3>
             </div>
             <p class="menu_content-p">Le bon choix des matériaux est crucial pour la réussite de votre <strong>agrandissement</strong>. Une
               ossature bois, par exemple, sera idéale pour ceux cherchant une solution rapide et esthétique, tandis que
@@ -144,7 +144,7 @@ keywords:
               l'utilisation de l'espace et à intégrer la nouvelle extension de manière fluide au bâti existant.</p>
 
 
-            <h3 class="menu_header-title2 text-to-left my-2">La nécessaire expertise des artisans spécialisés</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">La nécessaire expertise des artisans spécialisés</h3>
 
             <p class="menu_content-p">Choisir le bon <strong>artisan spécialisé</strong> est primordial. Qu'il s'agisse de charpentiers, de
               maçons ou de plombiers, chaque professionnel joue un rôle spécifique et essentiel. Assurez-vous de
@@ -184,7 +184,7 @@ keywords:
               fait partie. Des conflits peuvent vite surgir si les démarches administratives ne sont pas bien gérées.
             </p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Plan local d'urbanisme (PLU)</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Plan local d'urbanisme (PLU)</h3>
 
             <p class="menu_content-p">Votre commune dispose sûrement d’un Plan local d’urbanisme (PLU) dictant les règles de construction et
               d’aménagement. Ce document vous indiquera notamment les distances à respecter vis-à-vis des voisins, les
@@ -193,7 +193,7 @@ keywords:
             <p class="menu_content-p">Avant de commencer toute démarche, assurez-vous de le consulter pour éviter les mauvaises surprises et
               d’éventuelles amendes.</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Permis de construire et déclaration préalable</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Permis de construire et déclaration préalable</h3>
 
             <p class="menu_content-p">Selon l'envergure de votre projet, différents documents pourront être exigés. Un permis de construire est
               souvent nécessaire pour les extensions importantes. Pour les projets de moindre importance, une simple
@@ -223,30 +223,30 @@ keywords:
               à suivre. Voici un aperçu pour mieux comprendre le déroulement typique :</p>
 
             <ul class="ml-5">
-              <li class="menu_content-p"><strong>Conception et planification</strong> : Cette phase inclut la définition de vos besoins, la
+              <li class="menu_content-p color-black"><strong>Conception et planification</strong> : Cette phase inclut la définition de vos besoins, la
                 réalisation des esquisses et des plans, généralement en collaboration avec un architecte.</li>
-              <li class="menu_content-p"><strong>Démarches administratives</strong> : Obtention des autorisations nécessaires en suivant les
+              <li class="menu_content-p color-black"><strong>Démarches administratives</strong> : Obtention des autorisations nécessaires en suivant les
                 règlements locaux.</li>
-              <li class="menu_content-p"><strong>Préparation du terrain</strong> : Aménagement du sol, préparation des fondations, etc.</li>
-              <li class="menu_content-p"><strong>Construction</strong>&nbsp;&nbsp;: Édification de la structure, mise hors d'eau et hors d'air,
+              <li class="menu_content-p color-black"><strong>Préparation du terrain</strong> : Aménagement du sol, préparation des fondations, etc.</li>
+              <li class="menu_content-p color-black"><strong>Construction</strong>&nbsp;&nbsp;: Édification de la structure, mise hors d'eau et hors d'air,
                 intervention des différents corps de métier.</li>
-              <li class="menu_content-p"><strong>Finitions</strong> : Isolation, pose des cloisons, peinture, installation des équipements
+              <li class="menu_content-p color-black"><strong>Finitions</strong> : Isolation, pose des cloisons, peinture, installation des équipements
                 intérieurs.</li>
             </ul>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Conseils pratiques pour une extension réussie</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Conseils pratiques pour une extension réussie</h3>
 
             <p class="menu_content-p">Outre le suivi méthodique des étapes mentionnées, certaines astuces peuvent vous aider à réussir votre
               extension de maison :</p>
 
             <ul class="ml-5">
-              <li class="menu_content-p"><strong>Bien définir vos besoins</strong> : Prenez le temps de réfléchir à l’utilisation future de
+              <li class="menu_content-p color-black"><strong>Bien définir vos besoins</strong> : Prenez le temps de réfléchir à l’utilisation future de
                 l’espace ajouté et anticipez vos besoins à long terme.</li>
-              <li class="menu_content-p"><strong>Travailler avec des professionnels expérimentés</strong> : Investir dans les services d’un
+              <li class="menu_content-p color-black"><strong>Travailler avec des professionnels expérimentés</strong> : Investir dans les services d’un
                 architecte et d'artisans qualifiés vous fera gagner en sérénité et efficacité.</li>
-              <li class="menu_content-p"><strong>Faire preuve de flexibilité</strong> : Des imprévus peuvent surgir; être adaptable et prêt à
+              <li class="menu_content-p color-black"><strong>Faire preuve de flexibilité</strong> : Des imprévus peuvent surgir; être adaptable et prêt à
                 ajuster certains aspects du projet facilite souvent les choses.</li>
-              <li class="menu_content-p"><strong>Respecter votre budget</strong> : Prévoyez toujours une marge dans votre budget pour couvrir
+              <li class="menu_content-p color-black"><strong>Respecter votre budget</strong> : Prévoyez toujours une marge dans votre budget pour couvrir
                 les éventuels dépassements de coût.</li>
             </ul>
           </div>
@@ -276,16 +276,16 @@ keywords:
               <strong>maçonnerie</strong>, mais chaque technique présente ses avantages uniques, justifiant souvent
               l'écart tarifaire.</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Estimer son budget global</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Estimer son budget global</h3>
 
             <p class="menu_content-p">Pour obtenir une estimation précise, il convient de consulter divers professionnels et comparer plusieurs
               devis. Les éléments suivants doivent être pris en considération lors de cette évaluation :</p>
 
             <ul class="ml-5">
-              <li class="menu_content-p">Coût des matériaux</li>
-              <li class="menu_content-p">Tarifs des artisans</li>
-              <li class="menu_content-p">Dépenses pour l'achèvement des finitions</li>
-              <li class="menu_content-p">Charges administratives</li>
+              <li class="menu_content-p color-black">Coût des matériaux</li>
+              <li class="menu_content-p color-black">Tarifs des artisans</li>
+              <li class="menu_content-p color-black">Dépenses pour l'achèvement des finitions</li>
+              <li class="menu_content-p color-black">Charges administratives</li>
             </ul>
 
             <p class="menu_content-p">En compilant ces informations, vous aurez une vision plus claire du montant total requis pour la
