--- a/src/la-reprise-en-sous-ceuvre.html
+++ b/src/la-reprise-en-sous-ceuvre.html
@@ -44,15 +44,15 @@ keywords:
               l’existant.
             </p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Pourquoi opter pour la reprise en sous-œuvre ?</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Pourquoi opter pour la reprise en sous-œuvre ?</h3>
 
-            <p class="menu_content-p">Elle est nécessaire pour plusieurs raisons, notamment :</p>
+            <p class="menu_content-p color-black">Elle est nécessaire pour plusieurs raisons, notamment :</p>
             <ul class="ml-5">
-              <li class="menu_content-p"><strong>Stabilisation</strong> du bâtiment affaibli par le temps ou les
+              <li class="menu_content-p color-black"><strong>Stabilisation</strong> du bâtiment affaibli par le temps ou les
                 éléments naturels.</li>
-              <li class="menu_content-p">Adaptation à de nouvelles charges suite à des extensions ou des rénovations.
+              <li class="menu_content-p color-black">Adaptation à de nouvelles charges suite à des extensions ou des rénovations.
               </li>
-              <li class="menu_content-p">Prévention des problèmes futurs liés à des fondations insuffisamment solides.
+              <li class="menu_content-p color-black">Prévention des problèmes futurs liés à des fondations insuffisamment solides.
               </li>
             </ul>
           </div>
@@ -75,7 +75,7 @@ keywords:
               avantages et inconvénients
               selon les besoins spécifiques du projet. Les voici :</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Micropieux</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Micropieux</h3>
 
             <p class="menu_content-p">Les <strong>micropieux</strong> sont des pieux de petit diamètre insérés
               profondément dans le sol pour
@@ -87,7 +87,7 @@ keywords:
               peuvent pas supporter les charges modernes. Les micropieux offrent aussi une excellente solution dans les
               zones étroites ou confinées.</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Sous-solage manuel</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Sous-solage manuel</h3>
 
             <p class="menu_content-p">Cette technique consiste à creuser des tranchées sous les fondations existantes et
               à couler du béton pour
@@ -98,7 +98,7 @@ keywords:
               souterrains afin d'éviter
               tout dommage durant les travaux.</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Semelle de répartition</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Semelle de répartition</h3>
 
             <p class="menu_content-p">Une autre méthode courante est l'utilisation de la <strong>semelle de
                 répartition</strong>. Ce type de
@@ -130,7 +130,7 @@ keywords:
             <p class="menu_content-p">Pour réussir une reprise en sous-œuvre, il est indispensable de suivre certaines
               étapes précises :</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Reconnaissance de sol</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Reconnaissance de sol</h3>
 
             <p class="menu_content-p">L'étape initiale de toute reprise en sous-œuvre est la <strong>reconnaissance de
                 sol</strong>. Cette
@@ -141,7 +141,7 @@ keywords:
               terre, comme les roches
               ou les nappes phréatiques, afin d'éviter les mauvaises surprises au cours des travaux.</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Calculs et dimensionnement</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Calculs et dimensionnement</h3>
 
             <p class="menu_content-p">Une fois les informations nécessaires recueillies, des calculs précis sont
               nécessaires pour définir la
@@ -152,7 +152,7 @@ keywords:
               supporter les charges imposées
               par le bâtiment et prévenir tout problème futur de stabilité.</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Excavation à parois verticales</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Excavation à parois verticales</h3>
 
             <p class="menu_content-p">Vient ensuite l'<strong>excavation à parois verticales</strong>. Cette technique
               permet de creuser des
@@ -163,7 +163,7 @@ keywords:
               destabilisation du bâtiment existant. En d'autres termes, les portions de fouilles sont réalisées
               successivement plutôt qu'en une seule fois.</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Étaiement de la fouille</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Étaiement de la fouille</h3>
 
             <p class="menu_content-p">Pour assurer la sécurité des ouvriers et celle de la structure existante,
               l'<strong>étaiement de la
@@ -174,7 +174,7 @@ keywords:
               ajustés au fur et à mesure de
               l'avancement des travaux.</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Mise en place des nouveaux éléments de fondation</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Mise en place des nouveaux éléments de fondation</h3>
 
             <p class="menu_content-p">Avec l'excavation terminée et les parois renforcées, on peut maintenant installer
               les nouveaux éléments
@@ -186,7 +186,7 @@ keywords:
               supports temporaires. Ce processus assure que les nouvelles fondations offriront le soutien nécessaire au
               bâtiment.</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Finitions et vérifications</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Finitions et vérifications</h3>
 
             <p class="menu_content-p">En guise d’étape finale, les travaux de finition s’assurent que toutes les parties
               ont bien été mises en
@@ -217,7 +217,7 @@ keywords:
             <p class="menu_content-p">Voici quelques recommandations pour mener à bien un projet de reprise en
               sous-œuvre :</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Faire appel à des professionnels qualifiés</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Faire appel à des professionnels qualifiés</h3>
 
             <p class="menu_content-p">La reprise en sous-œuvre est une tâche complexe qui nécessite expertise et
               expérience. Il est donc
@@ -228,7 +228,7 @@ keywords:
               capables de réaliser les
               calculs de charge et de stabilité indispensables au succès des travaux.</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Planification rigoureuse</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Planification rigoureuse</h3>
 
             <p class="menu_content-p">Un bon plan est la clé de tout chantier réussi. Avant de commencer les travaux,
               prenez le temps de
@@ -262,7 +262,7 @@ keywords:
               bénéfiques non seulement
               sur la structure du bâtiment, mais aussi sur sa valeur globale. Voici quelques avantages concrets :</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Longévité du bâtiment accrue</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Longévité du bâtiment accrue</h3>
 
             <p class="menu_content-p">L'un des principaux bénéfices est l’augmentation de la <strong>stabilité</strong>
               et de la durabilité de
@@ -273,7 +273,7 @@ keywords:
               futures dépenses liées
               à d’éventuelles réparations majeures.</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Valorisation de l'immobilier</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Valorisation de l'immobilier</h3>
 
             <p class="menu_content-p">Dans le contexte immobilier, des fondations solides peuvent jouer un rôle
               déterminant. Un immeuble avec
@@ -305,7 +305,7 @@ keywords:
               certains défis. En être
               conscient permet de mieux préparer et anticiper les difficultés possibles :</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Coût élevé</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Coût élevé</h3>
 
             <p class="menu_content-p">Selon la complexité du projet et les techniques utilisées, les coûts peuvent
               rapidement grimper. Il est
@@ -315,7 +315,7 @@ keywords:
               coûts associés à chaque
               méthode et choisir celle qui correspond le mieux à vos besoins et à votre budget.</p>
 
-            <h3 class="menu_header-title2 text-to-left my-2">Durée des travaux</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Durée des travaux</h3>
 
             <p class="menu_content-p">Ce type de travaux prend généralement du temps. La patience est donc de mise car
               une exécution hâtive
