--- a/src/nos-prestations.html
+++ b/src/nos-prestations.html
@@ -103,9 +103,6 @@ keywords:
 
 <section class="menu section">
   <div class="container-fluid">
-    <div class="menu_header justify-content-center pb-0 to-be-right">
-      <h2 class="menu_header-title linear-after41 pb-0"> &nbsp; Rénovation et réhabilitation<br></h2>
-    </div>
     <div class="row">
       <div class="col-lg-7">
         <div class="menu_image">
@@ -116,6 +113,9 @@ keywords:
       </div>
       <div class="col-lg-5">
         <div class="menu_content">
+          <div class="menu_header justify-content-center pb-0 to-be-top">
+            <h2 class="menu_header-title linear-after41 pb-0"> &nbsp;&nbsp; Rénovation et réhabilitation<br></h2>
+          </div>
           <div class="container to-be-100">
             <p class="menu_content-p text-justify">
               La rénovation et la réhabilitation sont des services essentiels pour les bâtiments qui nécessitent une
@@ -185,11 +185,8 @@ keywords:
 </section>
 
 
-<section class="menu section pt-0">
+<section class="menu section pt-5">
   <div class="container-fluid">
-    <div class="menu_header justify-content-center pb-0 to-be-right">
-      <h2 class="menu_header-title linear-after41 pb-0"> &nbsp; Génie civil et infrastructure<br></h2>
-    </div>
     <div class="row">
       <div class="col-lg-7">
         <div class="menu_image">
@@ -200,6 +197,9 @@ keywords:
       </div>
       <div class="col-lg-5">
         <div class="menu_content">
+          <div class="menu_header justify-content-center pb-0 to-be-top">
+            <h2 class="menu_header-title linear-after41 pb-0"> &nbsp;&nbsp; Génie civil et infrastructure<br></h2>
+          </div>
           <div class="container to-be-100">
             <p class="menu_content-p text-justify">
               DMB Construction propose des services de génie civil et d’infrastructure pour des projets publics et
