--- a/src/entreprise-de-gros.html
+++ b/src/entreprise-de-gros.html
@@ -45,11 +45,11 @@ keywords:
               « l'ossature » du bâtiment.</p>
             <p class="menu_content-p">Les travaux de gros œuvre couvrent plusieurs étapes cruciales, notamment :</p>
             <ul class="ml-5">
-              <li class="menu_content-p">Terrassement et préparation du terrain</li>
-              <li class="menu_content-p">Construction des <strong>fondations</strong></li>
-              <li class="menu_content-p">Édification des murs porteurs</li>
-              <li class="menu_content-p">Mise en place de la <strong>dalle en béton armé</strong></li>
-              <li class="menu_content-p">Travaux de charpente et couverture</li>
+              <li class="menu_content-p color-black">Terrassement et préparation du terrain</li>
+              <li class="menu_content-p color-black">Construction des <strong>fondations</strong></li>
+              <li class="menu_content-p color-black">Édification des murs porteurs</li>
+              <li class="menu_content-p color-black">Mise en place de la <strong>dalle en béton armé</strong></li>
+              <li class="menu_content-p color-black">Travaux de charpente et couverture</li>
             </ul>
           </div>
         </div>
@@ -72,16 +72,16 @@ keywords:
             <p class="menu_content-p">Une <strong>entreprise générale</strong> de gros œuvre est responsable de multiples tâches au cours d'un
               projet de construction. Leur expertise s'étend bien au-delà de simples travaux de maçonnerie. Voici
               quelques-unes de leurs principales missions :</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Étude et planification</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Étude et planification</h3>
             <p class="menu_content-p">Avant même que les premiers coups de pelleteuse ne soient donnés, l'entreprise de gros œuvre intervient
               pour étudier le terrain et planifier rigoureusement chaque étape du chantier. Cette phase préparatoire
               inclut souvent la collaboration avec des architectes et des ingénieurs pour garantir que tous les aspects
               techniques soient pris en compte.</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Réalisation des fondations</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Réalisation des fondations</h3>
             <p class="menu_content-p">La qualité des <strong>fondations</strong> est primordiale pour la stabilité de toute structure.
               L'entreprise de gros œuvre utilise diverses méthodes telles que le radier, les semelles filantes ou
               isolées, selon la nature du sol et les spécificités du bâtiment à ériger.</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Montage des structures porteuses</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Montage des structures porteuses</h3>
             <p class="menu_content-p">Construire les murs porteurs et autres éléments structuraux est une tâche incontournable. Ces composants
               sont généralement réalisés en béton armé, en briques ou en blocs de béton, assurant ainsi la robustesse de
               l'édifice.</p>
@@ -110,14 +110,14 @@ keywords:
             <p class="menu_content-p">Confier votre projet de construction à une bonne <strong>entreprise de gros œuvre</strong> est essentiel
               pour garantir un résultat à la hauteur de vos attentes. Voici quelques critères pour vous aider à faire le
               bon choix :</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Expérience et expertise</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Expérience et expertise</h3>
             <p class="menu_content-p">Optez pour une entreprise ayant une solide expérience sur divers types de chantiers. La diversité des
               projets effectués par l’entreprise peut constituer un indicateur fiable de ses compétences et de sa
               capacité à gérer des situations complexes.</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Réputation et avis clients</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Réputation et avis clients</h3>
             <p class="menu_content-p">N'hésitez pas à consulter les avis des anciens clients et à vérifier la réputation de l'entreprise. Des
               critiques positives témoignent généralement d’un service de qualité et d'une satisfaction globale.</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Respect des délais et coûts maîtrisés</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Respect des délais et coûts maîtrisés</h3>
             <p class="menu_content-p">Un autre élément clé à prendre en compte est le respect des délais. Une bonne entreprise de gros œuvre
               doit être capable de livrer les travaux dans les temps impartis sans dépasser le budget convenu. Demandez
               plusieurs devis pour pouvoir comparer les prestations et les <strong>prix du gros œuvre</strong> proposés.
@@ -143,18 +143,18 @@ keywords:
             <p class="menu_content-p">Selon les caractéristiques de votre projet, les travaux de gros œuvre peuvent varier considérablement.
               Ci-dessous, nous allons passer en revue les types courants de travaux de construction compris dans cette
               catégorie :</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Maçonnerie</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Maçonnerie</h3>
             <p class="menu_content-p">La <strong>maçonnerie</strong> englobe la pose de briques, de pierres, de blocs de béton et de tous les
               matériaux permettant l'édification de structures horizontales et verticales. C'est un secteur où
               l'innovation rencontre la tradition, assurant à la fois esthétique et solidité.</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Travaux de terrassement</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Travaux de terrassement</h3>
             <p class="menu_content-p">Ces travaux consistent à préparer le sol avant la construction proprement dite. Ils incluent entre autres
               l'excavation des tranchées, le nivellement du terrain et parfois même le drainage.</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Fondations et dalles</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Fondations et dalles</h3>
             <p class="menu_content-p">Les fondations et la <strong>dalle en béton armé</strong> forment le socle du bâtiment. Elles doivent
               être exécutées avec une précision extrême pour assurer la stabilité de la construction. De plus, cette
               phase comprend souvent l’installation des réseaux souterrains nécessaires (eau, électricité, gaz).</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Structure en béton armé</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Structure en béton armé</h3>
             <p class="menu_content-p">Un grand nombre de bâtiments modernes reposent sur une <strong>ossature de bâtiment</strong> en béton
               armé. Ce matériau combine la résistance à la compression du béton avec la flexibilité de l'acier, offrant
               ainsi une robustesse incomparable.</p>
@@ -176,11 +176,11 @@ keywords:
             </div>
             <p class="menu_content-p">Comme dans tout secteur, les entreprises de gros œuvre font face à nombreux défis au quotidien. Parmi
               ceux-ci, on peut citer :</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Conformité aux normes de sécurité</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Conformité aux normes de sécurité</h3>
             <p class="menu_content-p">Les entreprises de gros œuvre sont soumises à des réglementations strictes en matière de santé et de
               sécurité. Elles doivent constamment s'assurer que les conditions de travail sur les chantiers respectent
               les normes pour éviter les accidents.</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Gestion des imprévus</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Gestion des imprévus</h3>
             <p class="menu_content-p">La météo, des problèmes géologiques inattendus ou encore des modifications demandées en cours de projet
               peuvent perturber le planning initial. Une gestion efficace et réactive est indispensable pour pallier ces
               imprévus.</p>
@@ -207,11 +207,11 @@ keywords:
             <br>
             <p class="menu_content-p">Le secteur du gros œuvre n'échappe pas à l'innovation. Des technologies émergentes et des approches
               novatrices transforment les méthodes traditionnelles :</p>
-            <h3 class="menu_header-title2 text-to-left my-2">BIM (Building Information Modeling)</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">BIM (Building Information Modeling)</h3>
             <p class="menu_content-p">Le BIM offre une vue d'ensemble numérique du projet de construction, facilitant la coordination entre
               toutes les parties prenantes. Cette technologie permet aussi de prévoir les besoins en matériaux et
               d’optimiser les coûts.</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Bétons écologiques</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Bétons écologiques</h3>
             <p class="menu_content-p">Dans un souci de durabilité environnementale, de nouveaux bétons moins polluants sont développés. Ces
               matériaux réduisent l’empreinte carbone liée à leur fabrication et augmentent la durée de vie des
               constructions.</p>
@@ -237,11 +237,11 @@ keywords:
               <strong>réhabilitation</strong> et la <strong>rénovation</strong> de bâtiments existants. Ces activités
               permettent de préserver et moderniser le patrimoine bâti tout en améliorant l’efficacité énergétique des
               bâtiments :</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Réhabilitation</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Réhabilitation</h3>
             <p class="menu_content-p">La réhabilitation implique de transformer entièrement un bâtiment existant pour l'adapter à de nouveaux
               usages ou aux exigences actuelles. Ces travaux peuvent inclure le renforcement des structures, la mise aux
               normes sanitaires et énergétiques.</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Rénovation</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Rénovation</h3>
             <p class="menu_content-p">Les travaux de <strong>rénovation</strong> visent principalement à remettre à neuf certaines parties d'un
               bâtiment sans altérer sa structure fondamentale. Cela peut porter sur la façade, les revêtements
               intérieurs, ou encore les systèmes électriques.</p>
@@ -267,11 +267,11 @@ keywords:
             <p class="menu_content-p">Le gros œuvre contribue largement à l’économie locale et nationale. Non seulement il génère de nombreux
               emplois, mais il dynamise également d'autres secteurs tels que celui des matériaux de construction et des
               équipements industriels.</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Création d’emplois</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Création d’emplois</h3>
             <p class="menu_content-p">Les entreprises de gros œuvre recrutent une large gamme de professionnels allant des manœuvres aux
               ingénieurs spécialisés. Cette diversité de profils permet de maintenir une certaine dynamique sur le
               marché du travail.</p>
-            <h3 class="menu_header-title2 text-to-left my-2">Soutien aux industries associées</h3>
+            <h3 class="menu_header-title3 text-to-left my-2">Soutien aux industries associées</h3>
             <p class="menu_content-p">La demande en matériaux (béton, acier, bois) et en équipements mécanisés (grues, bulldozers) favorise une
               activité industrielle intense, contribuant ainsi à un écosystème économique vigoureux.</p>
           </div>
