--- a/src/nos-prestations.html
+++ b/src/nos-prestations.html
@@ -62,11 +62,11 @@ keywords:
 <section class="menu section pt-0">
   <div class="container-fluid">
     <div class="menu_header justify-content-center pb-0 to-be-left">
-      <h2 class="menu_header-title linear-after6 pb-0 mb-0">Construction neuve &nbsp;<br><br></h2>
+      <h2 class="menu_header-title pb-0 mb-0">Construction neuve &nbsp;<br><br></h2>
     </div>
     <div class="row align-items-start">
       <div class="col-lg-5">
-        <div class="menu_content">
+        <div class="menu_content linear-before6">
           <div class="container to-be-100">
             <p class="menu_content-p text-justify">
               DMB Construction s’engage à accompagner ses clients dans chaque étape de leur projet de construction
@@ -93,7 +93,7 @@ keywords:
         <div class="menu_image">
           <div class="menu_image-black2">
           </div>
-          <img src="./assets/img/real-estate.jpeg" alt="" class="menu_image-img4">
+          <img src="./assets/img/construction.JPG" alt="" class="menu_image-img4">
         </div>
       </div>
     </div>
@@ -105,16 +105,16 @@ keywords:
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-7">
-        <div class="menu_image">
+        <div class="menu_image linear-before41">
           <div class="menu_image-black3">
           </div>
-          <img src="./assets/img/pexels.jpeg" alt="" class="menu_image-img4">
+          <img src="./assets/img/removation.jpeg" alt="" class="menu_image-img4">
         </div>
       </div>
       <div class="col-lg-5">
         <div class="menu_content">
           <div class="menu_header justify-content-center pb-0 to-be-top">
-            <h2 class="menu_header-title linear-after41 pb-0"> &nbsp;&nbsp; Rénovation et réhabilitation<br></h2>
+            <h2 class="menu_header-title pb-0">Rénovation et réhabilitation<br></h2>
           </div>
           <div class="container to-be-100">
             <p class="menu_content-p text-justify">
@@ -146,7 +146,7 @@ keywords:
 <section class="menu section pt-0">
   <div class="container-fluid">
     <div class="menu_header justify-content-center pb-0 to-be-left2">
-      <h2 class="menu_header-title linear-after3 pb-5">Extension et surélévation &nbsp;<br></h2>
+      <h2 class="menu_header-title pb-5">Extension et surélévation &nbsp;<br></h2>
     </div>
     <div class="row">
       <div class="col-lg-5">
@@ -174,10 +174,10 @@ keywords:
         </div>
       </div>
       <div class="col-lg-7">
-        <div class="menu_image">
+        <div class="menu_image linear-before66">
           <div class="menu_image-black2">
           </div>
-          <img src="./assets/img/extensionn.jpeg" alt="" class="menu_image-img4">
+          <img src="./assets/img/IMG_3638.jpeg" alt="" class="menu_image-img4">
         </div>
       </div>
     </div>
@@ -189,16 +189,16 @@ keywords:
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-7">
-        <div class="menu_image">
+        <div class="menu_image linear-before41">
           <div class="menu_image-black3">
           </div>
-          <img src="./assets/img/happy-african.jpeg" alt="" class="menu_image-img4">
+          <img src="./assets/img/genie.jpeg" alt="" class="menu_image-img4">
         </div>
       </div>
       <div class="col-lg-5">
         <div class="menu_content">
           <div class="menu_header justify-content-center pb-0 to-be-top">
-            <h2 class="menu_header-title linear-after41 pb-0"> &nbsp;&nbsp; Génie civil et infrastructure<br></h2>
+            <h2 class="menu_header-title pb-0"> &nbsp;&nbsp; Génie civil et infrastructure<br></h2>
           </div>
           <div class="container to-be-100">
             <p class="menu_content-p text-justify">
@@ -232,7 +232,7 @@ keywords:
 <section class="menu section pt-0">
   <div class="container-fluid">
     <div class="menu_header justify-content-center pb-0 to-be-left2">
-      <h2 class="menu_header-title linear-after3 pb-0">Installation d’équipements<br>
+      <h2 class="menu_header-title pb-0">Installation d’équipements<br>
         spécifiques</h2>
     </div>
     <div class="row">
@@ -260,7 +260,7 @@ keywords:
         </div>
       </div>
       <div class="col-lg-7">
-        <div class="menu_image">
+        <div class="menu_image linear-before66">
           <div class="menu_image-black2">
           </div>
           <img src="./assets/img/pool.jpeg" alt="" class="menu_image-img4">
