- changes font family, text, js

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <h3 class="menu_content-title">Une entreprise de construction</h3>
           <div class="blur">
             <p class="menu_content-p">
-              Fondée le 3 octobre 2015, DMB est une entreprise de construction dirigée par M. Dilan Mutlu, qui vise
+              Entreprise fondée le 4 octobre 2016, DMB est une entreprise de construction dirigée par M. Dilan Mutlu, qui vise
               l'excellence et la satisfaction client.
               <br><br>
               “Nous accordons une grande importance aux relations avec nos clients, en maintenant une
@@ -285,9 +285,9 @@
     <div class="row">
       <div class="col-md-12">
         <div class="menu_image">
-          <div class="menu_image-black">
-          </div>
-          <img src="./assets/img/value.png" alt="" class="menu_image-img444">
+          <!-- <div class="menu_image-black">
+          </div> -->
+          <img src="./assets/img/rse-image.png" alt="" class="menu_image-img444">
         </div>
         <div class="menu_image-faq">
           <div class="row align-items-center faq-item">
@@ -527,13 +527,13 @@
         <div class="menu_content">
           <div class="blur">
             <p class="menu_content-p">
-              La sécurité est notre priorité absolue chez DMB.
-              Nous respectons strictement les normes pour
-              assurer un environnement de travail protégé.
-              Protocoles rigoureux et collaboration étroite pour
-              prévenir les risques. Chez nous, chaque
-              personne compte, nous veillons à ce que tous
-              rentrent chez eux en sécurité.
+              La sécurité est la priorité numéro un chez DMB. 
+              Nous appliquons strictement les normes en vigueur 
+              pour garantir un environnement de travail sûr. 
+              Grâce à des protocoles rigoureux et une collaboration 
+              étroite entre nos équipes, nous faisons tout pour 
+              prévenir les risques. Parce que chaque personne est importante, 
+              nous nous engageons à ce que chacun soit en sécurité.
             </p>
           </div>
         </div>
