--- a/nos-prestations.html
+++ b/nos-prestations.html
@@ -100,7 +100,7 @@
       <h1 class="slider_content-title">
         Nos Prestations
       </h1>
-      <p class="slider_content-p">Maçonnerie : Tradition et Innovation Artistique</p>
+      <p class="slider_content-p">La Maçonnerie : Un Mélange de Tradition et d'Innovation Créative</p>
       <div class="slider_content-button">
         <a href="./contact.html" class="slider_content-button--a">
           Nous Contacter
