--- a/nos-realisations.html
+++ b/nos-realisations.html
@@ -100,7 +100,7 @@
       <h1 class="slider_content-title">
         Découvrez nos réalisations
       </h1>
-      <p class="slider_content-p">entreprise polyvalente en construction et maçonnerie offrant des solutions de qualité
+      <p class="slider_content-p">Entreprise polyvalente en construction et maçonnerie offrant des solutions de qualité
         supérieure dans tous les secteurs du bâtiment. Faites confiance à nos experts pour tous vos projets
         résidentiels, commerciaux et industriels.</p>
       <div class="slider_content-button">
