- fixed images and text

--- a/nos-prestations.html
+++ b/nos-prestations.html
@@ -118,7 +118,7 @@
         <div class="menu_header">
           <h2 class="menu_header-title slide-up">La maçonnerie chez DMB&nbsp;</h2>
           <span class="linear-afternn" ></span>
-          <h2 class="menu_header-title2 slide-down mt-3"><span class="white-bg px-0 mx-0">&nbsp;&nbsp;tradition et innovation
+          <h2 class="menu_header-title2 pl-5 slide-down mt-3"><span class="white-bg px-0 mx-0">tradition et innovation
               pour</span><br>
               <div class="text-bg2 pb-0">
                 des bâtiments durables<br>
