change picture in home page

--- a/src/accueil.html
+++ b/src/accueil.html
@@ -71,7 +71,7 @@ keywords:
       <div class="row mt-5">
         <div class="col-md-4 my-2">
           <div class="menu_image">
-            <img src="./assets/img/img1.JPG" alt="" class="menu_image-img3">
+            <img src="./assets/img/img4.jpg" alt="" class="menu_image-img3">
           </div>
         </div>
         <div class="col-md-4 my-2">
