change picture in home page

--- a/src/accueil.html
+++ b/src/accueil.html
@@ -184,7 +184,7 @@ keywords:
 
             <div class="item">
               <div class="image-container">
-                <img src="./assets/img/removation.jpeg" alt="" class="menu_image-owl">
+                <img src="./assets/img/renovation.jpg" alt="" class="menu_image-owl">
               </div>
               <div class="text-container">
                 <p class="menu_image-owl--p">RENOVATION ET REHABILITATION</p>
@@ -220,7 +220,7 @@ keywords:
 
             <div class="item">
               <div class="image-container">
-                <img src="./assets/img/removation.jpeg" alt="" class="menu_image-owl">
+                <img src="./assets/img/renovation.jpg" alt="" class="menu_image-owl">
               </div>
               <div class="text-container">
                 <p class="menu_image-owl--p">RENOVATION ET REHABILITATION</p>
